[gd_scene load_steps=6 format=2]

[ext_resource path="res://source/match/hud/MatchHUD.gd" type="Script" id=1]
[ext_resource path="res://source/match/hud/Deck.tscn" type="PackedScene" id=2]
[ext_resource path="res://graphics/fonts/fraktur/DreiFraktur.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://graphics/images/interface/white.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=1]
size = 72
font_data = ExtResource( 3 )

[node name="MatchHUD" type="CanvasLayer" groups=[
"MatchHUD",
]]
script = ExtResource( 1 )

[node name="Tween" type="Tween" parent="."]

[node name="ActivePosition" type="Control" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 260.0
margin_top = -280.0
margin_right = 510.0
margin_bottom = 120.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="ActivePosition"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -2.0
margin_top = -2.0
margin_right = 2.0
margin_bottom = 2.0
texture = ExtResource( 4 )
draw_center = false
patch_margin_left = 2
patch_margin_top = 2
patch_margin_right = 2
patch_margin_bottom = 2

[node name="Hand" type="Control" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -200.0
margin_bottom = -200.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Deck" parent="." instance=ExtResource( 2 )]
anchor_left = 0.0
anchor_top = 0.5
anchor_right = 0.0
anchor_bottom = 0.5
margin_left = 0.0
margin_top = -280.0
margin_right = 250.0
margin_bottom = 120.0

[node name="EndTurn" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -408.0
margin_top = -130.0
focus_mode = 0
custom_fonts/font = SubResource( 1 )
enabled_focus_mode = 0
text = "End Turn"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Deck" to="." method="_on_Deck_pressed"]
[connection signal="pressed" from="EndTurn" to="." method="_on_EndTurn_pressed"]
